--- a/flask-app/Dockerfile
+++ b/flask-app/Dockerfile
@@ -1,16 +1,16 @@
 
-FROM python:3.9
+FROM python:3.9-slim
+
 
 WORKDIR /app
 
 
 COPY requirements.txt .
-
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-
 COPY . .
+
+ENV FLASK_APP=app.py
 
 
 EXPOSE 5000
