--- a/streamlit-app/Dockerfile
+++ b/streamlit-app/Dockerfile
@@ -1,10 +1,11 @@
 
-FROM python:3.9
+FROM python:3.9-slim
+
 
 WORKDIR /app
 
-COPY requirements.txt .
 
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 
@@ -12,5 +13,6 @@ COPY . .
 
 
 EXPOSE 8501
+
 
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
