--- a/streamlit-app/Dockerfile
+++ b/streamlit-app/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.9-slim
 WORKDIR /app
 
 
-COPY requirements.txt .
+COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 
@@ -15,4 +15,4 @@ COPY . .
 EXPOSE 8501
 
 
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "--server.port", "8501", "--server.enableCORS", "false", "--server.headless", "true", "--browser.serverAddress", "0.0.0.0", "app.py"]
