--- a/flask-app/Dockerfile
+++ b/flask-app/Dockerfile
@@ -5,6 +5,12 @@ FROM python:3.9-slim
 WORKDIR /app
 
 
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
+
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
